# cran

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/cran/: Cargo.toml  README.md
crates/cran-cli/: Cargo.toml  README.md
crates/cran-cli/src/: main.rs
crates/cran-core/: Cargo.toml  README.md
crates/cran-core/src/: error.rs  lib.rs  traits.rs
crates/cran-core/src/types/: id.rs  mod.rs  result.rs  summary.rs
crates/cran-math/: Cargo.toml  README.md
