[package]
name = "cran-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository = "https://github.com/devmcsam/cran/crates/cran-cli"
license.workspace = true
description = "The command line interface for the cran library"
readme = "README.md"
homepage = "https://github.com/devmcsam/cran/crates/cran-cli"
categories = ["cryptography", "mathematics", "command-line-interface", "security"]
keywords = ["cli", "random", "math", "crypto"]

[dependencies]
