[package]
name = "cran-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository = "https://github.com/devmcsam/cran/crates/cran-cli"
license.workspace = true
description = "The command line interface for the cran library"
readme = "README.md"
homepage = "https://github.com/devmcsam/cran/crates/cran-cli"
categories = ["cryptography", "mathematics", "command-line-interface", "security"]
keywords = ["cli", "random", "math", "crypto"]

[dependencies]
clap = { version = "4.5.58", features = ["color", "derive"] }
indicatif = "0.18.3"
miette = "7.6.0"
comfy-table = "7.2.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"