[package]
name = "cran-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository = "https://github.com/devmcsam/cran/crate/cran-core"
license.workspace = true
description = "The core types, methods, and traits for the cran library"
readme = "README.md"
homepage = "https://github.com/devmcsam/cran/crate/cran-core"
categories = ["mathematics", "security", "cryptography", "finance"]
keywords = ["random", "math", "data", "crypto"]

[dependencies]
